--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio website</title>
     <link rel="stylesheet" href="style.css">
+   <link href="/website/css/uicons-bold-rounded.css"
+rel="stylesheet">
 </head>
 
 <body>
@@ -135,25 +137,29 @@
     <!-- =================service -->
 <div id="services">
 <div class="container">
- <h1 class="sstitle"> My Services</h1><br><br>
+
+  <div class="stitle">
+                        <h1>My Services</h1>
+                    </div>
  <div class="servic-list">
-    <div>
-        <h2> Web Design</h2><br><br>
+    <div><i class="fi fi-br-browser"></i>
+        <h2> Web Design &nbsp</h2><br><br>
         <p>
-            A web designer works on the appearance, layout, and, in some cases, content of a website. Appearance, for instance, relates to the colors, font, and images used. Layout refers to how information is structured and categorized. A good web design is easy to use, aesthetically pleasing, and suits the user group and brand of the website.
+            A web designer works on the appearance, layout, and, in some cases, content of a website. Appearance, for instance, relates to the colors, font, and images used. Layout refers to how information is structured and categorized.
         </p>
+            <a href="#"> learn more</a>
     </div>
- <div>
-        <h2> App Design</h2><br><br>
+ <div><i class="fi fi-sr-settings-sliders"></i>
+        <h2> App Design &nbsp</h2><br><br>
         <p>
-            Control every pixel to create customized & adaptive designs that look great on any screen. Take control of your codebase with plugins, testing, dev tools & build high quality apps. Mobile Ads SDK. Native Performance. Hot Reload
-        </p>
+            Control every pixel to create customized & adaptive designs that look great on any screen. Take control of your codebase with plugins, testing, dev tools & build high quality apps. Mobile Ads SDK. Native Performance.
+        </p> <a href="#"> learn more</a>
     </div>
-     <div>
-        <h2> Game Design</h2><br><br>
+     <div><i class="fi fi-bs-computer"></i>
+        <h2> Game Design&nbsp </i></h2><br><br>
         <p>
-            Bring your vision to life with the latest technological innovations and convenient tools. Find new opportunities to take your game to the next level.
-        </p>
+            Bring your vision to life with the latest technological innovations and convenient tools. Find new opportunities to take your game to the 
+        </p> <a href="#"> learn more</a>
     </div>
 
  </div>
