--- a/h.html
+++ b/h.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<!-- <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
         @import url('https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css')
     <link href="/website/css/uicons-outline-rounded.css"
     rel="stylesheet">
-    </head>
+    </head> -->
     <body>
         f1c9
         f1c9
